# svMultiPhysics

./: .gitignore  APPLICATION_PLAN.md  AUTO_IMPLEMENTATION.md  BC_CHECKLIST.md  CLEAN_BC_SUPPORT.md  CMakeLists.txt  FORMS_CONSTRAINTS_UPGRADE.md  IMPLEMENT_GRAD_DIV_H.md  IMPLEMENT_TENSOR3.md  JIT_COMPATIBILITY_REVIEW.md  JIT_COMPATIBLILITY_REVIEW.md  LLVM_JIT_IMPLEMENTATION_PLAN.md  PLAN_A_CHECKLIST.md  PLAN_B_CHECKLIST.md  README.md  RIS_SUPPORT_CHECKLIST.md  UNIFY_MESH.md  _array3_8h_source.html  _array_8h_source.html  _artificial_neural_net_material_8h_source.html  _basis_exceptions_8h_source.html  _basis_factory_8h.html  _basis_factory_8h__incl.map  _basis_factory_8h__incl.md5  _basis_factory_8h_source.html  _basis_function_8h_source.html  _basis_traits_8h.html  _basis_traits_8h__dep__incl.map  _basis_traits_8h__dep__incl.md5  _basis_traits_8h__incl.map  _basis_traits_8h__incl.md5  _basis_traits_8h_source.html  _boundary_condition_8h_source.html  _cep_mod_8h_source.html  _cep_mod_ap_8h_source.html  _cep_mod_bo_8h_source.html  _cep_mod_fn_8h_source.html  _cep_mod_ttp_8h_source.html  _chnl_mod_8h_source.html  _cm_mod_8h_source.html  (+1398 more)
Code/Source/solver/Application/: Application.h  CMakeLists.txt
Code/Source/solver/Application/Core/: ActiveDomainOutput.cpp  ActiveDomainOutput.h  ApplicationDriver.cpp  ApplicationDriver.h  LevelSetCurvatureSamples.cpp  LevelSetCurvatureSamples.h  LevelSetCutConfiguration.cpp  LevelSetCutConfiguration.h  LevelSetMaintenanceHistory.cpp  LevelSetMaintenanceHistory.h  MeshCollection.cpp  MeshCollection.h  NearestPointIndex.h  OopMpiLog.h  SimulationBuilder.cpp  SimulationBuilder.h
Code/Source/solver/Application/Tests/: CMakeLists.txt
Code/Source/solver/Application/Translators/: BoundaryConditionTranslator.cpp  BoundaryConditionTranslator.h  EquationTranslator.cpp  EquationTranslator.h  LevelSetEquationTranslator.cpp  LevelSetEquationTranslator.h  MaterialTranslator.cpp  MaterialTranslator.h  MeshTranslator.cpp  MeshTranslator.h
Code/Source/solver/FE/: ACCELERATE_ASSEMBLY.md  ACCELERATE_FE.md  CMakeLists.txt  FE.h  FE_EXTENSION.md  README.md
Code/Source/solver/FE/Analysis/: AdvancedStabilityAnalyzers.cpp  AdvancedStabilityAnalyzers.h  AnalysisNumericGuards.h  AnalysisSummaryMatching.h  AnalysisSummaryProducer.cpp  AnalysisSummaryProducer.h  AnalysisSummaryTypes.h  BoundaryConditionDescriptor.cpp  BoundaryConditionDescriptor.h  CompatibilityAnalyzer.cpp  CompatibilityAnalyzer.h  ConservationAnalyzer.cpp  ConservationAnalyzer.h  ConstitutiveLawMetadata.h  ConstraintAnalysisSummary.cpp  ConstraintAnalysisSummary.h  ConstraintRankAnalyzer.cpp  ConstraintRankAnalyzer.h  ContributionDescriptor.cpp  ContributionDescriptor.h  CouplingGraphAnalyzer.cpp  CouplingGraphAnalyzer.h  DAEStructureAnalyzer.cpp  DAEStructureAnalyzer.h  DiscreteMonotonicityAnalyzer.cpp  DiscreteMonotonicityAnalyzer.h  FormAnalysisBridge.cpp  FormAnalysisBridge.h  FormContributionLowerer.cpp  FormContributionLowerer.h  FormExprScanner.cpp  FormExprScanner.h  FormRuntimeMetadata.h  FormStructureAnalyzer.cpp  FormStructureAnalyzer.h  FormulationRecord.h  FortinOperatorAutogeneration.cpp  FortinOperatorAutogeneration.h  GaugeAdapter.cpp  GaugeAdapter.h  (+37 more)
Code/Source/solver/FE/Assembly/: Assembler.h  AssemblerFactory.cpp  AssemblerSelection.h  AssemblyConstraintDistributor.cpp  AssemblyConstraintDistributor.h  AssemblyContext.cpp  AssemblyContext.h  AssemblyKernel.cpp  AssemblyKernel.h  AssemblyLoop.cpp  AssemblyLoop.h  AssemblyScheduler.cpp  AssemblyScheduler.h  AssemblyStatistics.cpp  AssemblyStatistics.h  BatchedProjection.cpp  BatchedProjection.h  BatchedStiffness.cpp  BatchedStiffness.h  BlockAssembler.cpp  BlockAssembler.h  CachedAssembler.cpp  CachedAssembler.h  ColoredAssembler.cpp  ColoredAssembler.h  Coloring.h  CompositeMeshAccess.cpp  CompositeMeshAccess.h  ContactPairContext.h  CutDomainAssembler.h  CutIntegrationContext.h  DecoratorAssembler.h  DeviceAssembler.cpp  DeviceAssembler.h  FunctionalAssembler.cpp  FunctionalAssembler.h  GeometricNonlinearityHooks.h  GhostContributionManager.cpp  GhostContributionManager.h  GlobalSystemView.cpp  (+25 more)
Code/Source/solver/FE/Auxiliary/: AuxiliaryBindings.cpp  AuxiliaryBindings.h  AuxiliaryCouplingGraph.cpp  AuxiliaryCouplingGraph.h  AuxiliaryDAEAnalyzer.cpp  AuxiliaryDAEAnalyzer.h  AuxiliaryDerivativeProvider.cpp  AuxiliaryDerivativeProvider.h  AuxiliaryEventManager.cpp  AuxiliaryEventManager.h  AuxiliaryHistoryBuffer.cpp  AuxiliaryHistoryBuffer.h  AuxiliaryHistoryService.cpp  AuxiliaryHistoryService.h  AuxiliaryInitializationSolver.cpp  AuxiliaryInitializationSolver.h  AuxiliaryInputRegistry.cpp  AuxiliaryInputRegistry.h  AuxiliaryModelBuilder.cpp  AuxiliaryModelBuilder.h  AuxiliaryModelDSL.h  AuxiliaryMultirateScheduler.cpp  AuxiliaryMultirateScheduler.h  AuxiliaryNonsmoothPolicy.h  AuxiliaryOperatorBuilder.cpp  AuxiliaryOperatorBuilder.h  AuxiliaryOperatorRegistry.cpp  AuxiliaryOperatorRegistry.h  AuxiliaryRowOwnership.cpp  AuxiliaryRowOwnership.h  AuxiliaryState.h  AuxiliaryStateBuilder.h  AuxiliaryStateIndexing.cpp  AuxiliaryStateIndexing.h  AuxiliaryStateManager.cpp  AuxiliaryStateManager.h  AuxiliaryStateModel.h  AuxiliaryStateStepper.cpp  AuxiliaryStateStepper.h  AuxiliaryStateStorage.cpp  (+4 more)
Code/Source/solver/FE/Backends/: NOTES.md  PLAN.md
Code/Source/solver/FE/Basis/: BDMBasis_CHECKLIST.md  BSplineBasis.cpp  BSplineBasis.h  BasisCache.cpp  BasisCache.h  BasisExceptions.h  BasisFactory.cpp  BasisFactory.h  BasisFunction.cpp  BasisFunction.h  BasisIntegerMath.h  BasisTolerance.h  BasisTraits.h  BatchEvaluator.cpp  BatchEvaluator.h  BernsteinBasis.cpp  BernsteinBasis.h  BubbleBasis.cpp  BubbleBasis.h  CompatibleTensorVectorBasis.cpp  CompatibleTensorVectorBasis.h  DenseMatrixUtils.h  HermiteBasis.cpp  HermiteBasis.h  HierarchicalBasis.cpp  HierarchicalBasis.h  LagrangeBasis.cpp  LagrangeBasis.h  (+39 more)
Code/Source/solver/Mesh/: CMakeLists.txt  GeometryCache.h  Mesh.cpp  Mesh.h  Mesh_new.h  README.md  SpatialHashing.h  package-lock.json
Code/Source/solver/Physics/: CMakeLists.txt  PHYSICS_EXTENSION.md  PLAN.md  Physics.cpp  Physics.h
(+2559 files in other folders)
